force-app/main/default/objects/Adverse_Event__c/Adverse_Event__c.object-meta.xml
<CustomObject>
    <label>Adverse Event</label>
    <pluralLabel>Adverse Events</pluralLabel>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>Adverse Event Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>