force-app/main/default/objects/Adverse_Event__c/fields/AE_Status__c.field-meta.xml
<CustomField>
    <fullName>AE_Status__c</fullName><label>AE Status</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
        <value><fullName>Submitted to PV</fullName><default>false</default><label>Submitted to PV</label></value>
        <value><fullName>Follow Up Required</fullName><default>false</default><label>Follow Up Required</label></value>
        <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>