force-app/main/default/objects/Adverse_Event__c/fields/AE_Type__c.field-meta.xml
<CustomField>
    <fullName>AE_Type__c</fullName><label>AE Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Adverse Event</fullName><default>true</default><label>Adverse Event</label></value>
        <value><fullName>Product Complaint</fullName><default>false</default><label>Product Complaint</label></value>
        <value><fullName>Special Situation</fullName><default>false</default><label>Special Situation</label></value>
    </valueSetDefinition></valueSet>
</CustomField>