force-app/main/default/objects/Adverse_Event__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName><label>Drug</label><type>Lookup</type>
    <referenceTo>Drug__c</referenceTo>
    <relationshipLabel>Adverse Events</relationshipLabel>
    <relationshipName>Adverse_Events</relationshipName>
</CustomField>