force-app/main/default/objects/Adverse_Event__c/fields/Enrollee__c.field-meta.xml
<CustomField>
    <fullName>Enrollee__c</fullName><label>Enrollee</label><type>Lookup</type>
    <referenceTo>CareProgramEnrollee</referenceTo>
    <relationshipLabel>Adverse Events</relationshipLabel>
    <relationshipName>Adverse_Events</relationshipName><required>true</required>
</CustomField>