force-app/main/default/objects/Adverse_Event__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName><label>Event Description</label><type>LongTextArea</type>
    <length>32768</length><visibleLines>5</visibleLines>
</CustomField>