force-app/main/default/objects/Adverse_Event__c/fields/Onset_Date__c.field-meta.xml
<CustomField>
    <fullName>Onset_Date__c</fullName><label>Onset Date</label><type>Date</type>
</CustomField>