force-app/main/default/objects/Adverse_Event__c/fields/Regulatory_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Due_Date__c</fullName><label>Regulatory Due Date</label><type>Date</type>
</CustomField>