force-app/main/default/objects/Adverse_Event__c/fields/Reporter_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Type__c</fullName><label>Reporter Type</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Patient</fullName><default>false</default><label>Patient</label></value>
        <value><fullName>HCP</fullName><default>false</default><label>HCP</label></value>
        <value><fullName>PSR</fullName><default>true</default><label>PSR</label></value>
        <value><fullName>Nurse</fullName><default>false</default><label>Nurse</label></value>
    </valueSetDefinition></valueSet>
</CustomField>