force-app/main/default/objects/Adverse_Event__c/fields/Seriousness__c.field-meta.xml
<CustomField>
    <fullName>Seriousness__c</fullName><label>Seriousness</label><type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Non-Serious</fullName><default>true</default><label>Non-Serious</label></value>
        <value><fullName>Serious</fullName><default>false</default><label>Serious</label></value>
    </valueSetDefinition></valueSet>
</CustomField>